--- a/roadcrossing_Rl.ipynb
+++ b/roadcrossing_Rl.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "49dc2184",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.12.3)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_stream, resource_exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Q-Learning + Pygame Simple RL Road Crossing\n",
     "\n",
@@ -33,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "10914c62",
    "metadata": {},
    "outputs": [],
@@ -54,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "583051f1",
    "metadata": {},
    "outputs": [],
@@ -71,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "42393bd5",
    "metadata": {},
    "outputs": [],
@@ -87,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "8ccd8a69",
    "metadata": {},
    "outputs": [],
@@ -114,29 +97,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "306421f1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'done' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Main training loop\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mdone\u001b[49m:\n\u001b[32m      3\u001b[39m     \u001b[38;5;66;03m# Handle window events\u001b[39;00m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m event \u001b[38;5;129;01min\u001b[39;00m pygame.event.get():\n\u001b[32m      5\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m event.type == pygame.QUIT:\n",
-      "\u001b[31mNameError\u001b[39m: name 'done' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 50/500, epsilon=0.778\n",
+      "Episode 100/500, epsilon=0.606\n",
+      "Episode 150/500, epsilon=0.471\n",
+      "Episode 200/500, epsilon=0.367\n",
+      "Episode 250/500, epsilon=0.286\n",
+      "Episode 300/500, epsilon=0.222\n",
+      "Episode 350/500, epsilon=0.173\n",
+      "Episode 400/500, epsilon=0.135\n",
+      "Episode 450/500, epsilon=0.105\n",
+      "Episode 500/500, epsilon=0.082\n"
      ]
     }
    ],
    "source": [
+    "# Main training loop\n",
     "# Main training loop\n",
     "for ep in range(episodes):\n",
     "    state = 0  # Start at left-most cell\n",
     "    done = False\n",
     "    \n",
     "    while not done:\n",
+    "        # Handle window events\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                pygame.quit()\n",
+    "                exit()\n",
+    "\n",
     "        # Epsilon-greedy action selection\n",
     "        if random.uniform(0, 1) < epsilon:\n",
     "            action = random.choice(ACTIONS)\n",
@@ -176,13 +171,12 @@
     "    \n",
     "    # Print progress\n",
     "    if (ep + 1) % 50 == 0:\n",
-    "        print(f\"Episode {ep + 1}/{episodes}, epsilon={epsilon:.3f}\")\n",
-    "        \n"
+    "        print(f\"Episode {ep + 1}/{episodes}, epsilon={epsilon:.3f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6fd7729a",
    "metadata": {},
    "outputs": [
